--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -76,8 +76,8 @@
     </string-array>
 
     <string-array name="spinner_phy">
-        <item>1MBps</item>
-        <item>2MBps</item>
+        <item>1Mbps</item>
+        <item>2Mbps</item>
     </string-array>
 
 </resources>
